--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -11,16 +11,22 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/$1"
-    },
-    {
       "src": "/manifest.json",
+      "headers": {
+        "Cache-Control": "public, max-age=0, must-revalidate"
+      },
       "dest": "/manifest.json"
     },
     {
       "src": "/sw.js",
+      "headers": {
+        "Cache-Control": "no-cache, no-store, must-revalidate"
+      },
       "dest": "/sw.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
     }
   ]
 }
