--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -12,12 +12,19 @@
   "routes": [
     {
       "src": "/sw.js",
-      "headers": { "cache-control": "no-cache" },
-      "dest": "/sw.js"
+      "headers": { "cache-control": "no-cache" }
     },
     {
       "src": "/manifest.json",
       "dest": "/manifest.json"
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "/(.*).js",
+      "dest": "/$1.js"
     },
     {
       "src": "/(.*)",
