--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -12,19 +12,12 @@
   "routes": [
     {
       "src": "/sw.js",
-      "headers": { "cache-control": "no-cache" }
+      "headers": { "cache-control": "no-cache" },
+      "dest": "/sw.js"
     },
     {
       "src": "/manifest.json",
       "dest": "/manifest.json"
-    },
-    {
-      "src": "/assets/(.*)",
-      "dest": "/assets/$1"
-    },
-    {
-      "src": "/(.*).js",
-      "dest": "/$1.js"
     },
     {
       "src": "/(.*)",
