--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -11,17 +11,16 @@
   ],
   "routes": [
     {
-      "src": "/sw.js",
-      "headers": { "cache-control": "no-cache" },
-      "dest": "/sw.js"
+      "src": "/(.*)",
+      "dest": "/$1"
     },
     {
       "src": "/manifest.json",
       "dest": "/manifest.json"
     },
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "src": "/sw.js",
+      "dest": "/sw.js"
     }
   ]
 }
