--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -11,16 +11,16 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/$1"
+      "src": "/sw.js",
+      "dest": "/sw.js"
     },
     {
       "src": "/manifest.json",
       "dest": "/manifest.json"
     },
     {
-      "src": "/sw.js",
-      "dest": "/sw.js"
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
