--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -21,6 +21,10 @@
     {
       "src": "/sw.js",
       "dest": "/sw.js"
+    },
+    {
+      "src": "/notifysw.js",
+      "dest": "/notifysw.js"
     }
   ]
 }
