--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -9,18 +9,18 @@
       }
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "/$1"
+      "source": "/sw.js",
+      "destination": "/sw.js"
     },
     {
-      "src": "/manifest.json",
-      "dest": "/manifest.json"
+      "source": "/manifest.json",
+      "destination": "/manifest.json"
     },
     {
-      "src": "/sw.js",
-      "dest": "/sw.js"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
