--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-ga4": "^2.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-linkify": "^1.0.0-alpha",
     "react-router-dom": "^7.0.1",
     "vite-plugin-pwa": "^0.21.1",
     "workbox-window": "^7.3.0"
