--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,24 +1,53 @@
 {
+  "id": "/",
   "name": "NBK Youth",
   "short_name": "NBK Youth",
   "description": "NBK Youth Gangavaram",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "display": "standalone",
+  "orientation": "portrait",
   "start_url": "/?homescreen=1",
   "scope": "/",
   "icons": [
     {
-      "src": "logo.png",
+      "src": "logo-any-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
-      "src": "logo.png",
+      "src": "logo-maskable-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "logo-any-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "logo-maskable-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
+  "launch_handler": {},
+  "screenshots": [
+    {
+      "src": "screenshot1.png",
+      "sizes": "640x480",
+      "type": "image/png",
+      "label": "Screenshot 1"
+    },
+    {
+      "src": "screenshot2.png",
+      "sizes": "640x480",
+      "type": "image/png",
+      "label": "Screenshot 2"
     }
   ]
 }
