--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,12 +1,10 @@
 {
-  "id": "/",
   "name": "NBK Youth",
   "short_name": "NBK Youth",
   "description": "NBK Youth Gangavaram",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "display": "standalone",
-  "orientation": "portrait",
   "start_url": "/?homescreen=1",
   "scope": "/",
   "icons": [
@@ -14,40 +12,13 @@
       "src": "logo.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "logo.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any maskable"
     },
     {
       "src": "logo.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "logo.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
-    }
-  ],
-  "launch_handler": {},
-  "screenshots": [
-    {
-      "src": "screenshot1.png",
-      "sizes": "640x480",
-      "type": "image/png",
-      "label": "Screenshot 1"
-    },
-    {
-      "src": "screenshot2.png",
-      "sizes": "640x480",
-      "type": "image/png",
-      "label": "Screenshot 2"
+      "purpose": "any maskable"
     }
   ]
 }
