--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,11 @@
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-linkify": "^1.0.0-alpha",
     "react-router-dom": "^7.0.1",
+    "react-simple-icons": "^1.0.0-beta.5",
+    "simple-icons": "^14.10.0",
     "vite-plugin-pwa": "^0.21.1",
     "workbox-window": "^7.3.0"
   },
