--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-linkify": "^1.0.0-alpha",
     "react-router-dom": "^7.0.1",
     "react-simple-icons": "^1.0.0-beta.5",
+    "react-to-print": "^3.0.5",
     "simple-icons": "^14.10.0",
     "vite-plugin-pwa": "^0.21.1",
     "workbox-window": "^7.3.0"
