--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@google-cloud/storage": "^7.14.0",
     "@heroicons/react": "^2.2.0",
     "axios": "^1.7.8",
+    "file-saver": "^2.0.5",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^4.0.0",
@@ -26,7 +27,8 @@
     "react-linkify": "^1.0.0-alpha",
     "react-router-dom": "^7.0.1",
     "vite-plugin-pwa": "^0.21.1",
-    "workbox-window": "^7.3.0"
+    "workbox-window": "^7.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
